removed max width from footer. fixed classname of base container. Centered logo on mobile

--- a/components/Footer/style/styles.module.css
+++ b/components/Footer/style/styles.module.css
@@ -7,8 +7,6 @@
     height: auto;
     padding-left: 2%;
     padding-right: 2%;
-    max-width: 1700px;
-    margin: auto;
 }
 
 .footer_container_one {
